Overflow text fix for SeriesDetails

--- a/frontend/src/css/series-details.css
+++ b/frontend/src/css/series-details.css
@@ -25,9 +25,11 @@
     margin: 0;
     width: 140px;
     height: 235px;
+    overflow: hidden;
 }
 .description p {
-    margin: 3px 0 0 5px;
+    margin: 3px 0 0 10px;
+    overflow-wrap: break-word;
 }
 .create-date {
     margin: 5px 0 5px 10px;
